--- a/gen.yaml
+++ b/gen.yaml
@@ -6,7 +6,7 @@ management:
   generationVersion: 2.17.8
 generation:
   telemetryEnabled: false
-  sdkClassName: SDK
+  sdkClassName: Orders
   sdkFlattening: true
   singleTagPerOp: false
 python:
