--- a/.github/workflows/speakeasy_sdk_generation.yml
+++ b/.github/workflows/speakeasy_sdk_generation.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       force: ${{ github.event.inputs.force }}
       speakeasy_version: latest
-      openapi_doc_location: https://prod.speakeasyapi.dev/v1/apis/orders/version/v1/schema/download
+      openapi_doc_location: ./openapi/openapi.yaml
       openapi_doc_auth_header: x-api-key
       languages: |-
         - python
